# ACADIF

./: README.md  manage.py  pyproject.toml  requirements-dev.txt
MyAuth/: apps.py  urls.py  views.py
MyAuth/templates/MyAuth/: index.html
Qacademico2/: asgi.py  settings.py  urls.py  wsgi.py
Qacademico2/templates/Qacademico2/: index.html
SIGAPI/: settings.py
aluno/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py  viewsets.py
aluno/migrations/: 0001_initial.py  0002_aluno_rg.py  0003_alter_aluno_rg.py
curso/: models.py  serializer.py  urls.py  views.py  viewsets.py
curso/migrations/: 0001_initial.py
disciplina/: models.py
disciplina/migrations/: 0001_initial.py
egresso/: models.py  serializers.py  urls.py  views.py  viewsets.py
egresso/migrations/: 0001_initial.py  0002_rename_engresso_egresso.py
pais_de_aluno/: apps.py  models.py  serializer.py  urls.py  views.py  viewsets.py
pais_de_aluno/migrations/: 0001_initial.py
professor/: models.py  serializers.py  tests.py  urls.py  views.py
professor/migrations/: 0001_initial.py  0002_alter_professor_user.py
turma/: admin.py  models.py
turma/migrations/: 0001_initial.py  0002_alter_turma_semestre_cadeiras_delete_disciplina.py
